<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etxt_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/create_task_titleHint"
        android:inputType="text"
        android:maxLength="30" />

    <EditText
        android:id="@+id/etxt_Description"
        android:layout_width="match_parent"
        android:layout_height="321dp"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/create_task_DescriptionHint"
        android:inputType="textMultiLine"
        android:maxLength="300" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="207dp"
        android:orientation="vertical">

        <ListView
            android:id="@+id/lstv_ImageFiles"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_UploadImage"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/create_task_btnUploadImage" />

        <Button
            android:id="@+id/btn_ClearAllUploadImages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/GENERIC_CLEAR" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_Submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/GENERIC_SUBMIT" />

        <Button
            android:id="@+id/btn_Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/GENERIC_CANCEL" />
    </LinearLayout>

</LinearLayout>
