<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/AppTheme">

    <TextView
        android:id="@+id/txt_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/writereview_header"
        android:textAlignment="center"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="18dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Quality" />

            <RatingBar
                android:id="@+id/rb_quality"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:numStars="5"
                android:rating="1"
                android:scaleX=".6"
                android:scaleY=".6"
                android:stepSize="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Completion Time" />

            <RatingBar
                android:id="@+id/rb_ttc"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:numStars="5"
                android:rating="1"
                android:scaleX=".6"
                android:scaleY=".6"
                android:stepSize="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Professionalism" />

            <RatingBar
                android:id="@+id/rb_prof"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:numStars="5"
                android:rating="1"
                android:scaleX=".6"
                android:scaleY=".6"
                android:stepSize="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

    <TextView
        android:id="@+id/txt_charcount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:text="0/200"
        android:textAlignment="textEnd" />

    <EditText
        android:id="@+id/etxt_review"
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:gravity="top|left"
        android:hint="(Enter a short review)"
        android:inputType="textMultiLine"
        android:maxLength="250"
        android:padding="5dp"
        android:singleLine="false"
        android:typeface="normal" />

    <Button
        android:id="@+id/btn_submit"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/GENERIC_SUBMIT" />

    <Button
        android:id="@+id/btn_cancel"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/GENERIC_CANCEL" />

</LinearLayout>